spectec/test/elab/neg/parse-stray-printable.t
  $ ./main.exe parse-stray-printable.spectec 2>&1
  error[parse/stray-printable]: malformed token
    --> parse-stray-printable.spectec:3:1
    |
  3 | @
    | ^
  [1]
